[package]
name = "biter"
version = "0.1.5"
edition = "2024"
description = "Bit Iteration as fast as possible"
license = "MIT"
repository = "https://github.com/Pogwat/biter"
readme = "README.md"
keywords = ["no_std", "bit", "iteration"]

[dependencies]
bit_operations = "0.3.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
